fix: add overflow hidden for names

--- a/singolo2.css
+++ b/singolo2.css
@@ -284,6 +284,8 @@ nav li:first-child:before {
   font-weight: 900;
   letter-spacing: -0.2px;
   margin-top: 12px;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .person p {
   font-size: 12px;
